# Plateau

./: .gitignore  .gitmodules  CMakeLists.txt  Plateau.pro  README.md  correlatordata.cpp  correlatordata.h  datamodel.cpp  datamodel.h  dataoptiondialog.cpp  dataoptiondialog.h  global.h  gnuplotwidget.cpp  gnuplotwidget.h  gnuplotwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  update-gnuplot.sh  update-latan.sh
.github/workflows/: build-macos.yml  build-ubuntu.yml
gnuplot/: QtGnuplotInstance.h  QtGnuplotScene.cpp  QtGnuplotSettings.ui  QtGnuplotWidget.cpp  QtGnuplotWindow.cpp
src/: Global.h  MainWindow.cpp  MainWindow.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h
src/data/: CorrelatorData.cpp  DataOptionDialog.cpp  DataOptionDialog.h  DataTableModel.cpp  DataTableModel.h  correlatordata.cpp  correlatordata.h  dataoptiondialog.cpp  dataoptiondialog.h  dataoptiondialog.ui  datatablemodel.cpp  datatablemodel.h
src/gnuplot/: GnuplotWidget.cpp  GnuplotWidget.h  QtGnuplotEvent.cpp  QtGnuplotInstance.cpp  QtGnuplotItems.cpp  QtGnuplotScene.cpp  QtGnuplotWidget.cpp  gnuplotwidget.cpp  gnuplotwidget.h  gnuplotwidget.ui
